[package]
name = "for-sure"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Option-like type but with Deref implementation"
authors = ["Svyatoslav Varov <slava-varov3@mail.ru>"]
readme = "README.md"
repository = "https://www.github.com/hack3rmann/for-sure"
keywords = ["option", "null", "nil", "null-safety", "deref"]
categories = ["no-std"]

[features]
std = []
default = ["std"]
